[tool.poetry]
name = "quant-helpers"
version = "0.1.0"
description = "This repo contains useful tools and helpers for analyzing financial market data."
authors = ["Iman Enami <iman.enami@yahoo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.1"

[tool.poetry.extras]
tests = ["pytest"]

all = ["pytest"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.format]
optional = true

[tool.poetry.group.format.dependencies]
ruff = ">=0.6.8"

[tool.poetry.group.lint]
optional = true

[tool.poetry.group.lint.dependencies]
codespell = ">=2.2.2"

[tool.poetry.group.typecheck.dependencies]
mypy = ">=1.13.0"
